--- a/index_main.html
+++ b/index_main.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 	<title>Jangsun</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="http://jangsun.cf/style.css">
 	<script src="https://cdn.jsdelivr.net/npm/vue"></script>
 	<script src="https://code.jquery.com/jquery-1.11.3.js"></script>
 </head>
@@ -15,7 +15,7 @@
 	<!-- main-frame -->
 	<div id="main-frame">
 		<div class="common-header">
-			<a href="index.html" class="header-ci">JANGSUN</a>
+			<a href="index.html" class="header-ci">J</a>
 			<a href="" class="header-nav"><span></span></a>
 			<div class="header-menu">
 				<a href="about.html">About_</a>
