포트폴리오 업데이트

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
                             <span>JavaScript</span>
                         </div>
                         <div class="skills-bar">
-                            <span class="skills-bar-in" style="width:20%">20%</span>
+                            <span class="skills-bar-in" style="width:50%">50%</span>
                         </div>
                     </li>
                     <li>
@@ -66,7 +66,7 @@
                             <span>jQuery</span>
                         </div>
                         <div class="skills-bar">
-                            <span class="skills-bar-in" style="width:70%">70%</span>
+                            <span class="skills-bar-in" style="width:80%">80%</span>
                         </div>
                     </li>
                     <li>
@@ -75,7 +75,7 @@
                             <span>react</span>
                         </div>
                         <div class="skills-bar">
-                            <span class="skills-bar-in" style="width:50%">50%</span>
+                            <span class="skills-bar-in" style="width:60%">60%</span>
                         </div>
                     </li>
                     <li>
@@ -84,7 +84,7 @@
                             <span>SASS</span>
                         </div>
                         <div class="skills-bar">
-                            <span class="skills-bar-in" style="width:60%">60%</span>
+                            <span class="skills-bar-in" style="width:90%">90%</span>
                         </div>
                     </li>
                     <li>
@@ -111,11 +111,13 @@
             <h2>Others</h2>
             <section class="other-section">
                 <ul>
-                    <li><img src="img/others_git.jpg" alt=""><span>Git</span></li>
-                    <li><img src="img/others_photoshop.jpg" alt=""><span>PhotoShop</span></li>
-                    <li><img src="img/others_slack.jpg" alt=""><span>Slack</span></li>
-                    <li><img src="img/others_vs.jpg" alt=""><span>Visual Studio Code</span></li>
-                    <li><img src="img/others_trello.jpg" alt=""><span>Trello</span></li>
+                    <li><span class='img-area'><img src="img/others_git.jpg" alt=""></span><span>Git</span></li>
+                    <li><span class='img-area'><img src="img/others_figma.png" alt=""></span><span>Figma</span></li>
+                    <li><span class='img-area'><img src="img/others_slack.jpg" alt=""></span><span>Slack</span></li>
+                    <li><span class='img-area'><img src="img/other_jira.png" alt=""></span><span>Jira</span></li>
+                    <li><span class='img-area'><img src="img/others_vs.jpg" alt=""></span><span>vs code</span></li>
+                    <li><span class='img-area'><img src="img/others_trello.jpg" alt=""></span><span>Trello</span></li>
+                    <li><span class='img-area'><img src="img/others_photoshop.jpg" alt=""></span><span>PhotoShop</span></li>
                 </ul>
             </section>
 		</div>
