--- a/project.html
+++ b/project.html
@@ -30,9 +30,17 @@
             <!-- project-list -->
             <section class="project-list">
                 <ul>
-                    <li><a href="#p06" data-id="p06">
+                    <li><a href="#p08" data-id="p08">
                         <div class="thumb-box"></div>
-                        <strong class="title">비즈니스피플 모바일 부분 개편 작업중..</strong>
+                        <strong class="title">우잉 3.0 프로젝트 작업중..</strong>
+                    </a></li>
+                    <li><a href="#p07" data-id="p07">
+                        <div class="thumb-box"><img src="img/thumb_papyrus.jpg" alt=""></div>
+                        <strong class="title">파피루스 메신저 앱 신규 프로젝트 UI개발</strong>
+                    </a></li>
+                    <li><a href="#p06" data-id="p06">
+                        <div class="thumb-box"><img src="img/thumb_bp.png" alt=""></div>
+                        <strong class="title">비즈니스피플 모바일 부분 개편</strong>
                     </a></li>
                     <li><a href="#p05" data-id="p05">
                         <div class="thumb-box"><img src="img/thumb_lunipark_launcher.png" alt=""></div>
