--- a/carrer.html
+++ b/carrer.html
@@ -30,6 +30,23 @@
             <section class="carrer-list">
                 <ul>
                     <li>
+                        <span class="date">2023.08 ~ 2023.09</span>
+                        <strong class="company">SK Telecom</strong>
+                        <p>
+							프리랜서로 두달여간 프로젝트 상주 참여하였으며,<br>
+							Tworld 모바일 메인에 에이닷 미디어서비스 연계 작업과 T알림 개편 관련해서 UI개발 작업하였습니다.<br>
+							모두 리액트 개발된 서비스이며 스토리북을 이용하여 작업하였습니다.
+						</p>
+                    </li>
+                    <li>
+                        <span class="date">2022.11 ~ 2023.04</span>
+                        <strong class="company">콜라비팀</strong>
+                        <p>
+							콜라비팀 이메일 서비스 UI개발<br>
+							파피루스 모바일 메신저앱 UI개발
+						</p>
+                    </li>
+                    <li>
                         <span class="date">2020.05 ~ 2022.06</span>
                         <strong class="company">루니미디어</strong>
                         <p>
